// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureCallout renders information for a feature with a description 1`] = `
<Callout
  calloutWidth={300}
  directionalHint={5}
  gapSpace={5}
  hidden={false}
  onDismiss={[MockFunction]}
  target="<target element>"
>
  <div
    className="callout"
  >
    <div
      className="header"
    >
      <p>
        FeatureIDE
      </p>
    </div>
    <div
      className="inner"
    >
      <p>
        A sample description
      </p>
    </div>
    <StyledCommandBarBase
      farItems={
        Array [
          Object {
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Info",
            },
            "key": "details",
            "onClick": [Function],
            "secondaryText": "Ctrl+,",
            "text": "Details…",
          },
        ]
      }
      items={
        Array [
          Object {
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Add",
            },
            "key": "newMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "Add",
                  },
                  "key": "newBelow",
                  "onClick": [Function],
                  "secondaryText": "Ctrl+N",
                  "text": "New feature below",
                },
                Object {
                  "disabled": false,
                  "iconProps": Object {
                    "iconName": "Add",
                  },
                  "key": "newAbove",
                  "onClick": [Function],
                  "text": "New feature above",
                },
              ],
            },
            "text": undefined,
          },
          Object {
            "disabled": false,
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Remove",
            },
            "key": "removeMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "Remove",
                  },
                  "key": "remove",
                  "onClick": [Function],
                  "secondaryText": "⌫",
                  "text": "Remove feature",
                },
                Object {
                  "disabled": false,
                  "iconProps": Object {
                    "iconName": "Remove",
                  },
                  "key": "removeBelow",
                  "onClick": [Function],
                  "text": "Remove features below",
                },
              ],
            },
            "text": undefined,
          },
          Object {
            "disabled": false,
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "CollapseContentSingle",
            },
            "key": "collapseMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "CollapseContentSingle",
                  },
                  "key": "collapse",
                  "onClick": [Function],
                  "secondaryText": "Ctrl+C",
                  "text": "Collapse feature",
                },
                Object {
                  "itemType": 1,
                  "key": "divider",
                },
                Object {
                  "iconProps": Object {
                    "iconName": "CollapseContent",
                  },
                  "key": "collapseBelow",
                  "onClick": [Function],
                  "text": "Collapse features below",
                },
                Object {
                  "iconProps": Object {
                    "iconName": "ExploreContent",
                  },
                  "key": "expandBelow",
                  "onClick": [Function],
                  "text": "Expand features below",
                },
              ],
            },
            "text": undefined,
          },
        ]
      }
    />
  </div>
</Callout>
`;

exports[`FeatureCallout renders information for a feature without a description 1`] = `
<Callout
  calloutWidth={300}
  directionalHint={5}
  gapSpace={5}
  hidden={false}
  onDismiss={[MockFunction]}
  target="<target element>"
>
  <div
    className="callout"
  >
    <div
      className="header"
    >
      <p>
        FeatureHouse
      </p>
    </div>
    <div
      className="inner empty"
    />
    <StyledCommandBarBase
      farItems={
        Array [
          Object {
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Info",
            },
            "key": "details",
            "onClick": [Function],
            "secondaryText": "Ctrl+,",
            "text": "Details…",
          },
        ]
      }
      items={
        Array [
          Object {
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Add",
            },
            "key": "newMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "Add",
                  },
                  "key": "newBelow",
                  "onClick": [Function],
                  "secondaryText": "Ctrl+N",
                  "text": "New feature below",
                },
                Object {
                  "disabled": false,
                  "iconProps": Object {
                    "iconName": "Add",
                  },
                  "key": "newAbove",
                  "onClick": [Function],
                  "text": "New feature above",
                },
              ],
            },
            "text": undefined,
          },
          Object {
            "disabled": false,
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "Remove",
            },
            "key": "removeMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "Remove",
                  },
                  "key": "remove",
                  "onClick": [Function],
                  "secondaryText": "⌫",
                  "text": "Remove feature",
                },
                Object {
                  "disabled": false,
                  "iconProps": Object {
                    "iconName": "Remove",
                  },
                  "key": "removeBelow",
                  "onClick": [Function],
                  "text": "Remove features below",
                },
              ],
            },
            "text": undefined,
          },
          Object {
            "disabled": true,
            "iconOnly": true,
            "iconProps": Object {
              "iconName": "CollapseContentSingle",
            },
            "key": "collapseMenu",
            "onClick": [Function],
            "split": true,
            "subMenuProps": Object {
              "items": Array [
                Object {
                  "iconProps": Object {
                    "iconName": "CollapseContentSingle",
                  },
                  "key": "collapse",
                  "onClick": [Function],
                  "secondaryText": "Ctrl+C",
                  "text": "Collapse feature",
                },
                Object {
                  "itemType": 1,
                  "key": "divider",
                },
                Object {
                  "iconProps": Object {
                    "iconName": "CollapseContent",
                  },
                  "key": "collapseBelow",
                  "onClick": [Function],
                  "text": "Collapse features below",
                },
                Object {
                  "iconProps": Object {
                    "iconName": "ExploreContent",
                  },
                  "key": "expandBelow",
                  "onClick": [Function],
                  "text": "Expand features below",
                },
              ],
            },
            "text": undefined,
          },
        ]
      }
    />
  </div>
</Callout>
`;
